--- a/resources/locales/de.json
+++ b/resources/locales/de.json
@@ -2,70 +2,70 @@
   "language":"Deutsch",
   "languageTag":"de",
   "MainTab": {
-    "speed": "Geschwindigkeit von 0-100",
+    "speed": "Geschwindigkeit von 0 – 100, ",
     "left": "L",
     "right": "R"
   },
   "Programming": {
     "programName": "Programmname",
     "noConnectedDevice": "_ _ : _ _",
-    "length": "Länge:",
+    "length": "Zeilen:",
     "chooseDevice": "Gerät auswählen",
-    "dialogCancelButton": "ABBRECHEN",
+    "dialogCancelButton": "Abbrechen",
     "downloadMessage": "Anweisungen erfolgreich vom Roboter heruntergeladen!",
     "recordMessage": "Erfolgreich aufgezeichnet und auf dem Roboter gespeichert!",
     "uploadMessage": "Anweisungen erfolgreich auf den Roboter geladen!",
     "driveMessage": "Anweisungen abgearbeitet, Fahrt erfolgreich abgeschlossen!",
-    "bluetoothNotTurnedOnTitle": "Bluetooth ist ausgeschaltet",
-    "bluetoothNotTurnedOnMessage": "Bitte schalten Sie Bluetooth ein.",
-    "locationServiceDisabledTitle": "Ortungsdienst ist ausgeschaltet",
-    "locationServiceDisabledMessage": "Bitte schalten Sie den Ortungsdienst ein.",
+    "bluetoothNotTurnedOnTitle": "Bluetooth ist ausgeschaltet.",
+    "bluetoothNotTurnedOnMessage": "Bitte, schalte Bluetooth ein.",
+    "locationServiceDisabledTitle": "Ortungsdienst ist ausgeschaltet.",
+    "locationServiceDisabledMessage": "Bitte, schalte den Ortungsdienst ein.",
     "unsupportedAppVersionTitle": "Version nicht unterstützt",
-    "unsupportedAppVersionMessage": "Die App ist möglicherweise zu alt. Bitte lade die neuste Version aus dem Appstore / Playstore herunter.",
+    "unsupportedAppVersionMessage": "Die App ist möglicherweise zu alt. Bitte, lade die neuste Version aus dem Appstore / Playstore herunter.",
     "unsupportedRobotVersionTitle": "Version nicht unterstützt",
-    "unsupportedRobotVersionMessage": "Die Version des Roboters wird nicht mehr unterstützt. Bitte wenden Sie sich an explore-it um den Roboter auf die neuste version zu updaten.",
-    "emptyProgramTitle": "Fehler",
-    "emptyProgramMessage": "Das Programm, das Sie versuchen hochzuladen, ist leer.",
-    "programTooLongTitle": "Fehler",
-    "programTooLongMessage" : "Das Programm, das Sie versuchen hochzuladen, darf nicht mehr als 4096 Instruktionen enthalten. Ihr Programm enthält {0} Instruktionen."
+    "unsupportedRobotVersionMessage": "Die Version des Roboters wird nicht mehr unterstützt. Bitte wende dich an explore-it, um den Roboter auf die neuste Version zu updaten.",
+    "emptyProgramTitle": "",
+    "emptyProgramMessage": "Das Programm, das du versuchst hochzuladen, ist leer.",
+    "programTooLongTitle": "",
+    "programTooLongMessage" : "Das Programm, das du versuchst hochzuladen, darf nicht mehr als 4096 Instruktionen enthalten. Dein Programm enthält {0} Instruktionen."
   },
   "BlockProgramming": {
     "programSelectionPrompt": "...",
     "programSelectionPromptTitle": "Wähle ein Programm"
   },
   "SpeedInput": {
-    "invalidEntryTitle": "Ungültige Eingabe",
-    "invalidEntryMessage": "Bitte gib nur ganze Zahlen zwischen 0-100 ein."
+    "invalidEntryTitle": "",
+    "invalidEntryMessage": "Bitte, gib eine ganze Zahlen von 0-100 ein."
   },
   "Settings": {
     "interval": "Intervall:",
-    "interval-unit": "pro Sekunde (1..50)",
+    "interval-unit": "Programmzeilen pro Sekunde (1..50)",
     "learn": "Lernen:",
-    "duration": "Dauer:",
+    "duration": "Dauer des Aufzeichnens:",
     "duration-unit": "Sekunden (1..80)",
     "language": "Sprache:",
     "robotVersion": "Roboter Version:",
     "websiteURL":"https://www.explore-it.org/de",
-    "enteredDurationTooBigTitle": "Fehler",
+    "enteredDurationTooBigTitle": "",
     "enteredDurationTooBigMessage": "Die eingegebene Zahl ist zu gross.",
-    "enteredIntervalTooBigTitle": "Fehler",
+    "enteredIntervalTooBigTitle": "",
     "enteredIntervalTooBigMessage": "Die eingegebene Zahl ist zu gross.",
-    "invalidDurationTitle": "Ungültige Eingabe",
-    "invalidDurationMessage": "Bitte gib nur ganze Zahlen zwischen 1-80 ein.",
-    "invalidIntervalTitle": "Ungültige Eingabe",
-    "invalidIntervalMessage": "Bitte gib nur ganze Zahlen zwischen 1-50 ein.",
+    "invalidDurationTitle": "",
+    "invalidDurationMessage": "Bitte, gib eine ganze Zahlen von 1-80 ein.",
+    "invalidIntervalTitle": "",
+    "invalidIntervalMessage": "Bitte, gib eine ganze Zahlen von 1-50 ein.",
     "updatedMessage": "Einstellungen sind aktualisiert"
   },
   "RoboticsDatabase": {
-    "failureTitle": "Fehler",
-    "emptyNameMessage": "Bitte geben Sie einen Namen ein",
+    "failureTitle": "",
+    "emptyNameMessage": "Bitte, gib einen Namen ein.",
     "addFailedMessage": "Ein Fehler ist aufgetreten. Das Programm konnte nicht gespeichert werden.",
     "nameTakenMessage": "Name ist bereits vergeben",
-    "duplicateFailedMessage": "Ein Fehler ist aufgetreten. Programm konnte nicht dupliziert werden.",
+    "duplicateFailedMessage": "Ein Fehler ist aufgetreten. Das Programm konnte nicht dupliziert werden.",
     "deleteFailedMessage": "Ein Fehler ist aufgetreten. Das Programm konnte nicht gelöscht werden.",
-    "programUsedMessage": "Das Programm wird von einem anderen Programm verwendet",
-    "programUsedByActiveProgramTitle": "Programm kann nicht gelöscht werden",
-    "programUsedByActiveProgramMessage": "Das Programm wird vom aktuell geöffneten Programm verwendet",
+    "programUsedMessage": "Das Programm wird von einem anderen Programm verwendet.",
+    "programUsedByActiveProgramTitle": "Programm kann nicht gelöscht werden.",
+    "programUsedByActiveProgramMessage": "Das Programm wird vom aktuell geöffneten Programm verwendet.",
     "deleteSuccessMessage": "Programmm gelöscht",
     "saveSuccessMessage": "Programm gespeichert",
     "duplicateSuccessMessage": "Programm dupliziert"
