--- a/resources/locales/it.json
+++ b/resources/locales/it.json
@@ -2,7 +2,7 @@
   "language":"Italiano",
   "languageTag":"it",
   "MainTab": {
-    "speed": "Velocità da 0 a 100, ",
+    "speed": "Velocità da 0 - 100, ",
     "left": "SX",
     "right": "DX"
   },
