--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -203,7 +203,9 @@
     "insertAfter": "Insert after",
     "moveUp": "Move up",
     "moveDown": "Move down",
-    "delete": "Delete"
+    "delete": "Delete",
+    "deleteConfirmTitle": "Delete Instruction",
+    "deleteConfirmMessage": "Are you sure you want to delete this instruction?"
   },
   "programOptionsMenu": {
     "title": "Program Options",
