--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -236,6 +236,7 @@
     "cancel": "Abbrechen",
     "save": "Speichern",
     "close": "Schließen",
+    "back": "Zurück",
     "characters": "{{count}}/{{max}} Zeichen"
   },
   "virtualRobot": {
