--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -236,6 +236,7 @@
     "cancel": "Cancel",
     "save": "Save",
     "close": "Close",
+    "back": "Back",
     "characters": "{{count}}/{{max}} characters"
   },
   "virtualRobot": {
