--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -236,6 +236,7 @@
     "cancel": "Annuler",
     "save": "Enregistrer",
     "close": "Fermer",
+    "back": "Retour",
     "characters": "{{count}}/{{max}} caractères"
   },
   "virtualRobot": {
