--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -236,6 +236,7 @@
     "cancel": "Annulla",
     "save": "Salva",
     "close": "Chiudi",
+    "back": "Indietro",
     "characters": "{{count}}/{{max}} caratteri"
   },
   "virtualRobot": {
